tests/machine/x/kotlin/group_by.error
line 27:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by.kt:27:21: error: unresolved reference: age
        __res.add(p.age)
                    ^
/workspace/mochi/tests/machine/x/kotlin/group_by.kt:30:8: error: unresolved reference: toDouble
}.map{ toDouble(it) }.average()))
       ^

 26:     for (p in g) {
 27:         __res.add(p.age)
 28:     }
